GitHub Exercise for Tuesday

--- a/github.html
+++ b/github.html
@@ -3,16 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <title>Github</title>
-    <style> {
-    background-color: black;
-
+    <style>
+        #cover {
+    background-color: black; color: darkgrey;
     }
     </style>
 </head>
 <body>
 <header id="cover">
-    Pull requests   Issues   Marketplace   Explore
+
+    <img src="images/github.jpg" alt="githublogo" width="40" height="40">
+    Pull requests
+    Issues
+    Marketplace
+    Explore
+
 </header>
 
+<main>
+    <br>
+    <div>
+      <span><img src="images/codeupsign.jpg" alt="codeuplogo" width="40" height="40">
+        Codeup</span> <br> <br>
+        <a href="Repositories">Repositories</a>
+        <a href="People">People</a>
+        <a href="Team">Team</a>
+        <a href="Projects">Projects</a>
+        <a href="Settings">Settings</a>
+    </div>
+    <br>
+    <div>
+
+        <table>
+            <tr>
+                <th>Codeup's dev team</th>
+            </tr>
+            <tr>
+                <td><img src="images/placeholder48.svg" alt="placeholder"></td>
+                <td><a href="">Kent Beck</a> <br> KentBeck</td>
+                <td></td>
+                <td>Member</td>
+                <td>1 team</td>
+            </tr>
+            <tr>
+                <td><img src="images/placeholder48.svg" alt="placeholder"></td>
+                <td><a href="">Codeup Instruction Staff</a> <br> CodeupInstructors</td>
+                <td></td>
+                <td>Member</td>
+                <td>1 team</td>
+            </tr>
+            <tr>
+                <td><img src="images/placeholder48.svg" alt="placeholder"></td>
+                <td><a href="">Martin Fowler</a></td>
+                <td></td>
+                <td>Member</td>
+                <td>0 teams</td>
+            </tr>
+        </table>
+    </div>
+</main>
+<br>
+<hr>
+<br>
+<footer>
+    © 2018 Github, Inc.
+    <a href="">Terms</a>
+    &nbsp;
+    <a href="">Privacy</a>
+    &nbsp;
+    <a href="">Security</a>
+    &nbsp;
+    <a href="">Status</a>
+    &nbsp;
+    <a href="">Help</a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a href="">Contact GitHub</a>
+    &nbsp;
+    <a href="">API</a>
+    &nbsp;
+    <a href="">Training</a>
+    &nbsp;
+    <a href="">Shop</a>
+    &nbsp;
+    <a href="">Blog</a>
+    &nbsp;
+    <a href="">About</a>
+</footer>
 </body>
 </html>
