Work as it looked at 3:30 demo

--- a/github.html
+++ b/github.html
@@ -7,23 +7,35 @@
         #cover {
     background-color: black; color: darkgrey;
     }
+        #table {
+            border: 1px solid black
+        }
+
+        #holder {
+            padding-left: 40px;
+        }
     </style>
 </head>
 <body>
 <header id="cover">
 
-    <img src="images/github.jpg" alt="githublogo" width="40" height="40">
-    Pull requests
-    Issues
-    Marketplace
-    Explore
+    <img src="images/github.jpg" alt="githublogo" width="40" height="40" align="center">
+    &nbsp;
+    &nbsp;
+    <a href="">Pull requests</a>
+    &nbsp;
+    <a href="">Issues</a>
+    &nbsp;
+    <a href="">Marketplace</a>
+    &nbsp;
+    <a href="">Explore</a>
 
 </header>
 
 <main>
     <br>
     <div>
-      <span><img src="images/codeupsign.jpg" alt="codeuplogo" width="40" height="40">
+      <span><img src="images/codeupsign.jpg" alt="codeuplogo" width="40" height="40" align="center">
         Codeup</span> <br> <br>
         <a href="Repositories">Repositories</a>
         <a href="People">People</a>
@@ -32,28 +44,29 @@
         <a href="Settings">Settings</a>
     </div>
     <br>
-    <div>
+    <div id="table">
+
 
         <table>
             <tr>
                 <th>Codeup's dev team</th>
             </tr>
             <tr>
-                <td><img src="images/placeholder48.svg" alt="placeholder"></td>
+                <td id="holder"><img src="images/placeholder48.svg" alt="placeholder"></td>
                 <td><a href="">Kent Beck</a> <br> KentBeck</td>
                 <td></td>
-                <td>Member</td>
+                <td >Member</td>
                 <td>1 team</td>
             </tr>
             <tr>
-                <td><img src="images/placeholder48.svg" alt="placeholder"></td>
+                <td id="holder"><img src="images/placeholder48.svg" alt="placeholder"></td>
                 <td><a href="">Codeup Instruction Staff</a> <br> CodeupInstructors</td>
                 <td></td>
                 <td>Member</td>
                 <td>1 team</td>
             </tr>
             <tr>
-                <td><img src="images/placeholder48.svg" alt="placeholder"></td>
+                <td id="holder"><img src="images/placeholder48.svg" alt="placeholder"></td>
                 <td><a href="">Martin Fowler</a></td>
                 <td></td>
                 <td>Member</td>
