--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -5,7 +5,18 @@
     <title>Title</title>
 </head>
 <body>
+<script>
+    function sum(a,b) {         //warm up for day 2.
+        return a + b;
+    }
+
+    console.log(sum(2,2));
+
+</script>
 <h1>Deimos</h1>
 <p>These are my morning warmups:</p>
+
+
+
 </body>
 </html>
