--- a/forms.html
+++ b/forms.html
@@ -15,23 +15,13 @@
                 <label for="password">Password</label>
                 <input id="password" name="password" type="password" placeholder="Enter Password">
             </p>
-            <p>
-                <button type="submit">Login</button>
-            </p>
-        </form>
         <hr>
         <h2>Tell us about yourself.</h2>
-        <form method="POST" action="http://request-inspector.glitch.me/">
             <p>
                 <label for="Bio:">Bio:</label>
                 <textarea id="Bio:" name="Bio:" placeholder="Describe yourself in a few short words." rows="10" cols="40"></textarea>
             </p>
-            <p>
-                <button type="submit">Send</button>
-            </p>
-        </form>
         <hr>
-        <form method="POST" action="http://request-inspector.glitch.me/">
             <h3>Please pick one of the answers below.</h3>
             <p>How did you hear about us?</p>
             <label>
@@ -50,17 +40,12 @@
                 <input type="radio" name="question_1" value="Other">
                 Other
             </label>
-            <p>
-                <button type="submit">Submit</button>
-            </p>
-        </form>
         <hr>
-        <form method="POST" action="http://request-inspector.glitch.me/">
             <h3>What browser are you using to view the site?</h3>
             <label for="Browser">Select Web Browser:</label>
             <select id="Browser" name="Browser">
                 <option>Firefox</option>
-                <option>Chrome</option>
+                <option selected>Chrome</option>
                 <option>Internet Explorer</option>
                 <option>Safari</option>
             </select>
