additions to the welcome exercise

--- a/welcome.html
+++ b/welcome.html
@@ -19,7 +19,7 @@
     <ul>
         <li><a href="https//www.codeup.com/">Codeup</a></li>
         <li><a href="https//www.youtube.com">YouTube</a></li>
-        <li></li>
+        <li><a href="https//www.netflix.com">Netflix</a></li>
     </ul>
 </nav>
 </body>
@@ -39,11 +39,11 @@
 <div>
     <h3>Favorite Things</h3>
     <ul class="list">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Humans</li>
+        <li>Animals</li>
+        <li>Looking around</li>
+        <li>Food</li>
+        <li>Being Comfortable</li>
     </ul>
 </div>
 
