external stylesheet and update on welcome page

--- a/welcome.html
+++ b/welcome.html
@@ -3,14 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style>
-        .list {
-            background-color: aqua;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1 id="top">Hello,World!</h1>
+<a id="top"></a>
+    <h1>Hello,World!</h1>
 <p>Deimos!</p>
 
 <nav id="navbar">
