css exercise progress

--- a/welcome.html
+++ b/welcome.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <a id="top"></a>
-    <h1>Hello,World!</h1>
+    <h1 class="fancy-header">Hello,World!</h1>
 <p>Deimos!</p>
 
 <nav id="navbar">
