--- a/welcome.html
+++ b/welcome.html
@@ -42,7 +42,7 @@
     </div>
 
     <h3>Instructors</h3>
-    <table>
+    <table id="user-table">
         <tr>
             <th>Name</th>
             <th>Cohort</th>
