more styles for the welcome page

--- a/welcome.html
+++ b/welcome.html
@@ -14,9 +14,9 @@
 
 
         <ul>
-            <li><a href="https//www.codeup.com/">Codeup</a></li>
-            <li><a href="https//www.youtube.com">YouTube</a></li>
-            <li><a href="https//www.netflix.com">Netflix</a></li>
+            <li><a href="https://codeup.com/" target="_blank">Codeup</a></li>
+            <li><a href="https://www.youtube.com">YouTube</a></li>
+            <li><a href="https://www.netflix.com">Netflix</a></li>
         </ul>
     </nav>
     <div>
