--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -12,6 +12,18 @@
 
     console.log(sum(2,2));
 
+    // write a function to find the area of a triangle
+    // this function takes in 3 parameters
+    function triangleArea(a,b,c) {
+        //this variable stores half the perimeter
+        var half = (a+b+c)/2;
+        //the area is the squareroot of this
+        var area = Math.sqrt (half * (half-a) * (half-b) * (half-c));
+        //function returns the area
+        return area;
+    }
+    //console log to see the result
+    console.log(triangleArea(5, 6, 7));
 </script>
 <h1>Deimos</h1>
 <p>These are my morning warmups:</p>
