--- a/practice.html
+++ b/practice.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Practice</title>
-</head>
-<body>
-    <h1>First day of class!</h1>
-    <p>Practice exercises will live here.</p>
-<!--Comment goes here-->
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Practice</title>
+        <style>
+
+        </style>
+    </head>
+
+    <body>
+    <header></header>
+        <main>
+            <h1>Intro to CSS!</h1>
+        </main>
+        <footer></footer>
+    </body>
+
 </html>
