--- a/welcome.html
+++ b/welcome.html
@@ -1,66 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Title</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <title>Veridian Dynamics</title>
+</head>
+<body>
     <a id="top"></a>
-        <h1 class="fancy-header">Hello,World!</h1>
-    <p>Deimos!</p>
-
-    <nav id="navbar">
-
-
-        <ul>
-            <li><a href="https://codeup.com/" target="_blank">Codeup</a></li>
-            <li><a href="https://www.youtube.com">YouTube</a></li>
-            <li><a href="https://www.netflix.com">Netflix</a></li>
-        </ul>
-    </nav>
-    <div>
-        <h3>Favorite Food</h3>
-        <ol id="favorite-food" class="list">
-            <li>Pizza</li>
-            <li>Burgers</li>
-            <li>Fries</li>
-            <li>Fish</li>
-            <li>Candy</li>
+    <h1>Welcome to Veridian Dynamics!</h1>
+    <p>
+        At Veridian Dynamics, <strong>we</strong> solve <em>your</em>
+        problems with <strong><em>technology.</em></strong>
+    </p>
+    <hr>
+        <h2>Core Values</h2>
+    <p>
+    <ul>
+        <li>Competence</li>
+        <li>Involvement</li>
+        <li>Technology</li>
+    </ul>
+    </p>
+    <p>
+        <h2>Our Process</h2>
+        <ol>
+            <li>Plan</li>
+            <li>Evaluate</li>
+            <li>Implement</li>
         </ol>
-    </div>
-
-    <div>
-        <h3>Favorite Things</h3>
-        <ul class="list">
-            <li>Humans</li>
-            <li>Animals</li>
-            <li>Looking around</li>
-            <li>Food</li>
-            <li>Being Comfortable</li>
-        </ul>
-    </div>
-
-    <h3>Instructors</h3>
-    <table id="user-table">
-        <tr>
-            <th>Name</th>
-            <th>Cohort</th>
-        </tr>
-        <tr>
-            <td>Vivian</td>
-            <td>Quincy</td>
-        </tr>
-        <tr>
-            <td>David</td>
-            <td>Xanadu</td>
-        </tr>
-        <tr>
-            <td>Sophie</td>
-            <td>Olympic</td>
-        </tr>
-    </table>
-
-    <a href="#top">Back to the top</a>
-    </body>
+    </p>
+    <p>
+        <h2>2020 Vision</h2>
+    <ul>
+        <li>Become #1 in Technology</li>
+        <li>Increase Succes by 20%</li>
+        <li>Increase Business by 30%</li>
+    </ul>
+    </p>
+    <hr>
+    <p>
+        <h2>Company Vision</h2>
+        <div class="row">
+            <div class="column">
+                <img src="images/taking-notes.jpg" alt="taking-notes" width="550"
+                height="350">
+                <img src="images/silhouette.jpg" alt="silhouette" width="550"
+                height="350">
+            </div>
+            <div class="column">
+                <img src="images/ocean-sunset.jpg" alt="sunset" width="550"
+                heigh="350">
+                <img src="images/hall-picture.jpg" alt="hallway" width="550"
+                height="350">
+            </div>
+        </div>
+    </p>
+    <p>
+        <h2>Our product</h2>
+        <table>
+            <tr>
+                <th>Plan</th>
+                <th>Price</th>
+                <th>Features</th>
+            </tr>
+            <tr>
+                <td>Starter</td>
+                <td>$99</td>
+                <td>Base Technology</td>
+            </tr>
+            <tr>
+                <td>Advanced</td>
+                <td>$199</td>
+                <td>Additional Features</td>
+            </tr>
+            <tr>
+                <td>Premium</td>
+                <td>$499</td>
+                <td>Unlimited Support</td>
+            </tr>
+        </table>
+    </p>
+    <p>
+        <em>All Products come with our quality gaurantee™.</em>
+    </p>
+    <a href="#top">Go to the top of the page.</a>
+</body>
 </html>
