--- a/welcome.html
+++ b/welcome.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Veridian Dynamics</title>
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <a id="top"></a>
-    <h1>Welcome to Veridian Dynamics!</h1>
+    <h1 id="main-header">Welcome to Veridian Dynamics!</h1>
     <p>
         At Veridian Dynamics, <strong>we</strong> solve <em>your</em>
         problems with <strong><em>technology.</em></strong>
     </p>
     <hr>
-        <h2>Core Values</h2>
+        <h2 id="header-1">Core Values</h2>
     <p>
     <ul>
         <li>Competence</li>
@@ -21,7 +23,7 @@
     </ul>
     </p>
     <p>
-        <h2>Our Process</h2>
+        <h2 id="header-2">Our Process</h2>
         <ol>
             <li>Plan</li>
             <li>Evaluate</li>
@@ -29,16 +31,16 @@
         </ol>
     </p>
     <p>
-        <h2>2020 Vision</h2>
+        <h2 id="header-3">2020 Vision</h2>
     <ul>
         <li>Become #1 in Technology</li>
-        <li>Increase Succes by 20%</li>
+        <li>Increase Success by 20%</li>
         <li>Increase Business by 30%</li>
     </ul>
     </p>
     <hr>
     <p>
-        <h2>Company Vision</h2>
+        <h2 id="vision">Company Vision</h2>
         <div class="row">
             <div class="column">
                 <img src="images/taking-notes.jpg" alt="taking-notes" width="550"
@@ -54,9 +56,10 @@
             </div>
         </div>
     </p>
+    <hr>
     <p>
-        <h2>Our product</h2>
-        <table>
+        <h2 id="product">Our product</h2>
+        <table id="user-table">
             <tr>
                 <th>Plan</th>
                 <th>Price</th>
