welcome.html progress

--- a/welcome.html
+++ b/welcome.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <a id="top"></a>
-    <h1 id="main-header">Welcome to Veridian Dynamics!</h1>
+    <img src="images/veridian.png" alt="Veridian Dynamics" width="400" height="100" align="center">
+    <h1 id="main-header"> Welcome to Veridian Dynamics!</h1>
     <p>
         At Veridian Dynamics, <strong>we</strong> solve <em>your</em>
         problems with <strong><em>technology.</em></strong>
