css exercise on welcome.html page progress

--- a/welcome.html
+++ b/welcome.html
@@ -8,40 +8,37 @@
 </head>
 <body>
     <a id="top"></a>
-    <img src="images/veridian.png" alt="Veridian Dynamics" width="400" height="100" align="center">
-    <h1 id="main-header"> Welcome to Veridian Dynamics!</h1>
+    <img src="images/veridian.png" alt="Veridian Dynamics" width="500" height="100" align="center">
+    <h1 class="header" id="main-header"> Welcome to Veridian Dynamics!</h1>
     <p>
         At Veridian Dynamics, <strong>we</strong> solve <em>your</em>
         problems with <strong><em>technology.</em></strong>
     </p>
     <hr>
-        <h2 id="header-1">Core Values</h2>
-    <p>
+    <div id="scene">
+        <h2 id="header-1" class="header">Core Values</h2>
     <ul>
         <li>Competence</li>
         <li>Involvement</li>
         <li>Technology</li>
     </ul>
-    </p>
-    <p>
-        <h2 id="header-2">Our Process</h2>
+        <h2 id="header-2" class="header">Our Process</h2>
         <ol>
             <li>Plan</li>
             <li>Evaluate</li>
             <li>Implement</li>
         </ol>
-    </p>
-    <p>
-        <h2 id="header-3">2020 Vision</h2>
+
+        <h2 id="header-3" class="header">2020 Vision</h2>
     <ul>
         <li>Become #1 in Technology</li>
         <li>Increase Success by 20%</li>
         <li>Increase Business by 30%</li>
     </ul>
-    </p>
+    </div>
     <hr>
     <p>
-        <h2 id="vision">Company Vision</h2>
+        <h2 id="vision" class="header">Company Vision</h2>
         <div class="row">
             <div class="column">
                 <img src="images/taking-notes.jpg" alt="taking-notes" width="550"
@@ -58,8 +55,8 @@
         </div>
     </p>
     <hr>
-    <p>
-        <h2 id="product">Our product</h2>
+    <div id="bottom">
+        <h2 id="product" class="header">Our product</h2>
         <table id="user-table">
             <tr>
                 <th>Plan</th>
@@ -82,7 +79,7 @@
                 <td>Unlimited Support</td>
             </tr>
         </table>
-    </p>
+    </div>
     <p>
         <em>All Products come with our quality gaurantee™.</em>
     </p>
