css exercise progress

--- a/welcome.html
+++ b/welcome.html
@@ -14,8 +14,9 @@
         At Veridian Dynamics, <strong>we</strong> solve <em>your</em>
         problems with <strong><em>technology.</em></strong>
     </p>
-    <hr>
-    <div id="scene">
+    <hr class="style-eight">
+    <nav>
+    <div>
         <h2 id="header-1" class="header">Core Values</h2>
     <ul>
         <li>Competence</li>
@@ -36,7 +37,8 @@
         <li>Increase Business by 30%</li>
     </ul>
     </div>
-    <hr>
+    </nav>
+    <hr class="style-eight">
         <h2 id="vision" class="header">Company Vision</h2>
         <div class="row">
             <div class="column">
@@ -52,8 +54,8 @@
                 height="350">
             </div>
         </div>
-    <hr>
-    <div id="bottom">
+    <hr class="style-eight">
+    <div>
         <h2 id="product" class="header">Our product</h2>
         <table id="user-table">
             <tr>
