css exercise progress

--- a/welcome.html
+++ b/welcome.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
+    <header>
     <a id="top"></a>
     <img src="images/veridian.png" alt="Veridian Dynamics" width="500" height="100" align="center">
     <h1 class="header" id="main-header"> Welcome to Veridian Dynamics!</h1>
@@ -14,29 +15,32 @@
         At Veridian Dynamics, <strong>we</strong> solve <em>your</em>
         problems with <strong><em>technology.</em></strong>
     </p>
+    </header>
     <hr class="style-eight">
     <nav>
-    <div>
-        <h2 id="header-1" class="header">Core Values</h2>
-    <ul>
-        <li>Competence</li>
-        <li>Involvement</li>
-        <li>Technology</li>
-    </ul>
-        <h2 id="header-2" class="header">Our Process</h2>
-        <ol>
-            <li>Plan</li>
-            <li>Evaluate</li>
-            <li>Implement</li>
-        </ol>
-
-        <h2 id="header-3" class="header">2020 Vision</h2>
-    <ul>
-        <li>Become #1 in Technology</li>
-        <li>Increase Success by 20%</li>
-        <li>Increase Business by 30%</li>
-    </ul>
-    </div>
+        <ul>
+            <li><a href="#">Core Values</a>
+                <ul>
+                    <li><a href="#">Competence</a></li>
+                    <li><a href="#">Involvement</a></li>
+                    <li><a href="#">Technology</a></li>
+                </ul>            
+            </li>
+            <li><a href="#">Our Process</a>
+                <ul>
+                    <li><a href="#">Plan</a></li>
+                    <li><a href="#">Evaluate</a></li>
+                    <li><a href="#">Implement</a></li>
+                </ul>
+            </li>
+            <li><a href="#">2020 Vision</a>
+                <ul>
+                    <li><a href="#">Become #1 in Technology</a></li>
+                    <li><a href="#">Increase Success by 20%</a></li>
+                    <li><a href="#">Increase Business by 30%</a></li>
+                </ul>
+            </li>
+        </ul>
     </nav>
     <hr class="style-eight">
         <h2 id="vision" class="header">Company Vision</h2>
