--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -24,6 +24,13 @@
     }
     //console log to see the result
     console.log(triangleArea(5, 6, 7));
+
+    //write a function
+    function sayHi() {
+        return "Hi";
+
+        console.log(sayHi());
+    }
 </script>
 <h1>Deimos</h1>
 <p>These are my morning warmups:</p>
