--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -25,7 +25,7 @@
     //console log to see the result
     console.log(triangleArea(5, 6, 7));
 
-    //write a function
+    //write a function that returns the string "Hi"
     function sayHi() {
         return "Hi";
 
