--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -31,6 +31,12 @@
 
         console.log(sayHi());
     }
+
+    function sayHello(name) {
+        return "Hello " + name + "!"
+
+        console.log(sayHello)
+    }
 </script>
 <h1>Deimos</h1>
 <p>These are my morning warmups:</p>
