morning warmup sayHello

--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Navbar-exercise</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/flexbox-nav-exercise.css">
 </head>
 <body>
 <nav>
