--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -35,7 +35,7 @@
     function sayHello(name) {
         return "Hello " + name + "!"
 
-        console.log(sayHello)
+        console.log(sayHello("Chris"))
     }
 </script>
 <h1>Deimos</h1>
