--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Navbar-exercise</title>
     <link rel="stylesheet" href="css/flexbox-nav-exercise.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Work+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e4493fa9f1.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <nav>
@@ -11,12 +14,13 @@
         <li><a href="#">Articles</a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Market</a></li>
-        <li><a href="#">Jobs</a></li>
-        <li>Logo</li>
-        <li><a href="#">follow us</a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+        <li id="job"><a href="#">Jobs</a></li>
+        <li id="logo"><a href="#">Logo</a></li>
+        <li><a href="#">Follow us!</a></li>
+        <li><a href="#"><i class="fas fa-search"></i></a></li>
+        <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
+        <li><a href="#"><i class="fas fa-user-circle"></i></a></li>
+
     </ul>
 </nav>
 
