mondrian exercise progress

--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -19,8 +19,7 @@
         <li><a href="#">Follow us!</a></li>
         <li><a href="#"><i class="fas fa-search"></i></a></li>
         <li><a href="#"><i class="fas fa-shopping-cart"></i></a></li>
-        <li><a href="#"><i class="fas fa-user-circle"></i></a></li>
-
+        <li><a href="#"><i class="fas fa-user-tie"></i></i></a></li>
     </ul>
 </nav>
 
