--- a/mondrian.html
+++ b/mondrian.html
@@ -7,9 +7,16 @@
 </head>
 <body>
 <main>
-    <div class="red">red</div>
-    <div class="green">yellow</div>
-    <div class="blue">blue</div>
+    <div class="blue"></div>
+    <div class="drkblue"></div>
+    <div class="red"></div>
+    <div class="drkred"></div>
+    <div class="white"></div>
+    <div class="white2"></div>
+    <div class="white3"></div>
+    <div class="yellow"></div>
+    <div class="yellow2"></div>
+
 </main>
 </body>
 </html>
