morning warmup and grid exercise progress

--- a/mondrian.html
+++ b/mondrian.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/mondrian.css">
 </head>
 <body>
+<div class="bord">
 <main>
     <div class="blue"></div>
     <div class="drkblue"></div>
@@ -16,7 +17,7 @@
     <div class="white3"></div>
     <div class="yellow"></div>
     <div class="yellow2"></div>
-
 </main>
+</div>
 </body>
 </html>
