--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -37,6 +37,13 @@
 
         console.log(sayHello("Chris"))
     }
+
+    function firstItem(arr) {
+        return arr[0];
+
+        console.log(arr(["one", "two", "three", "four"]))
+    }
+
 </script>
 <h1>Deimos</h1>
 <p>These are my morning warmups:</p>
