morning-warmup and generic-web-layout exercise progress

--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -44,6 +44,15 @@
         console.log(arr(["one", "two", "three", "four"]))
     }
 
+    //function to find an area of an equilateral triangle
+
+    function equilateralTriangleArea(num) {
+        return triangleArea(num,num,num)
+
+        console.log(equilateralTriangleArea(3));
+        console.log(triangleArea(3,3,3));
+
+    }
 </script>
 <h1>Deimos</h1>
 <p>These are my morning warmups:</p>
