generic-web-layout exercise complete

--- a/generic-web-layout.html
+++ b/generic-web-layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css/generic-web-layout.css">
+    <script src="https://kit.fontawesome.com/e4493fa9f1.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -69,7 +70,9 @@
         </p>
     </footer>
     <div class="ad1">
-
+        <div id="pages"><span id="uno"> 1 </span><span> 2 </span><span> 3 </span><span> 4 </span><span> 5 </span><i class="fas fa-chevron-circle-right"></i></div>
+        <div id="foot">Footer</div>
+        <div id="power">Powered by electricity</div>
     </div>
 </body>
 </html>
