morning-warmup exercise

--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -33,7 +33,7 @@
     }
 
     function sayHello(name) {
-        return "Hello " + name + "!"
+        return "Hello " + name + "!";
 
         console.log(sayHello("Chris"))
     }
@@ -47,11 +47,17 @@
     //function to find an area of an equilateral triangle
 
     function equilateralTriangleArea(num) {
-        return triangleArea(num,num,num)
+        return triangleArea(num,num,num);
 
         console.log(equilateralTriangleArea(3));
         console.log(triangleArea(3,3,3));
 
+    }
+
+    function addStrings(a, b, c) {
+        return (a + b + c);
+
+        console.log(addString("one", "two", "three"));
     }
 </script>
 <h1>Deimos</h1>
