media-queries exercise complete

--- a/media-queries.html
+++ b/media-queries.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Media Queries</title>
     <link rel="stylesheet" href="css/media-queries.css">
+    <script src="https://kit.fontawesome.com/e4493fa9f1.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="alert-info hidden-on-desktop">
@@ -32,9 +33,13 @@
     </section>
     <footer>
         <p>(c) 2017 All rights reserved</p>
-        <div id="social-media-links">
-
-        </div>
     </footer>
+    <div id="social-media-links">
+        <ul>
+        <li><a href="#"><i class="fab fa-facebook"></i></a>Facbook</li>
+        <li><a href="#"><i class="fab fa-twitter"></i></a>Twitter</li>
+        <li><a href="#"><i class="fab fa-instagram"></i></a>Instagram</li>
+        </ul>
+        </div>
 </body>
 </html>
