--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -17,7 +17,7 @@
     function triangleArea(a,b,c) {
         //this variable stores half the perimeter
         var half = (a+b+c)/2;
-        //the area is the squareroot of this
+        //the area is the square root of this
         var area = Math.sqrt (half * (half-a) * (half-b) * (half-c));
         //function returns the area
         return area;
@@ -35,13 +35,13 @@
     function sayHello(name) {
         return "Hello " + name + "!";
 
-        console.log(sayHello("Chris"))
+        console.log(sayHello("Chris"));
     }
 
     function firstItem(arr) {
         return arr[0];
 
-        console.log(arr(["one", "two", "three", "four"]))
+        console.log(arr(["one", "two", "three", "four"]));
     }
 
     //function to find an area of an equilateral triangle
