--- a/practice.html
+++ b/practice.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Practice</title>
         <style>
 
@@ -9,9 +10,8 @@
     </head>
 
     <body>
-    <header></header>
         <main>
-            <h1>Intro to CSS!</h1>
+            <h1>Intro to Media Queries!</h1>
         </main>
         <footer></footer>
     </body>
