--- a/order-pizza.html
+++ b/order-pizza.html
@@ -7,35 +7,34 @@
     <title> Pizza World</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <title>Order-Pizza</title>
+    <script src="https://kit.fontawesome.com/e4493fa9f1.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/order-pizza.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Pizza World</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Order Online<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#">Order Online <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">Menu</a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Menu<span class="sr-only">(current)</span></a>
-            </li>
-            </li>
-            <li class="nav-item">
-                <div class="form-group">
-                    <label for="username" class="form-label"</label>
-                    <input type="text" id="username" name="username" class="form-control">
-                </div>
+            <li>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Zipcode" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search stores near you!</button>
+                </form>
             </li>
         </ul>
+        <i class="fas fa-user-alt"></i>Sign up!
+
     </div>
 </nav>
-
 </body>
 </html>
