morning warmup and order-pizza exercise progress

--- a/morning-warmup.html
+++ b/morning-warmup.html
@@ -31,13 +31,13 @@
 
         console.log(sayHi());
     }
-
+    //write a javascript function that returns hello plus a name
     function sayHello(name) {
         return "Hello " + name + "!";
 
         console.log(sayHello("Chris"));
     }
-
+    //write a javascript function that returns the first item of an array
     function firstItem(arr) {
         return arr[0];
 
@@ -53,11 +53,17 @@
         console.log(triangleArea(3,3,3));
 
     }
-
+    //write a javascript function that concatenates three strings and returns the output
     function addStrings(a, b, c) {
         return (a + b + c);
 
         console.log(addString("one", "two", "three"));
+    }
+    //write a javascript function that takes in a string and returns that string with all the characters uppercase
+    function upperCase(str) {
+        return str.toUpperCase()
+
+        console.log(upperCase(string));
     }
 </script>
 <h1>Deimos</h1>
