--- a/order-pizza.html
+++ b/order-pizza.html
@@ -37,10 +37,33 @@
         </nav>
         <div class="container-fluid">
             <div class="jumbotron jumbotron-fluid">
-                <div class="container">
                     <h1 class="display-4 text-center bg-light" >Welcome to Pizza World!</h1>
-                </div>
             </div>    
+        </div>
+        <h2>Build your own pizza!</h2>
+        <hr>
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link active" href="#"><span class="badge badge-pill badge-secondary">1</span>Size and Crust</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#"><span class="badge badge-pill badge-secondary">2</span>Cheese and Sauce</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#"><span class="badge badge-pill badge-secondary">3</span>Toppings</a>
+            </li>
+        </ul>
+        <div class="card header-card">
+            <div class="card-body">
+                Choose size and crust
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                Hand Tossed
+            </div>
+            <div class="card-body">
+            </div>
         </div>
     </body>
 </html>
